# fightclub

./: Cargo.toml
src/: error.rs  main.rs
src/model/: account_meta.rs  create_token.rs  generate_keypair.rs  mint_token.rs  mod.rs  send_sol.rs  send_token.rs  sign_message.rs  verify_message.rs
src/routes/: create_token.rs  generate_keypair.rs  mint_token.rs  mod.rs  send_sol.rs  send_token.rs  sign_message.rs  verify_message.rs
