[package]
name = "solserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
dotenv = "0.15.0"
solana-client = "1.17.16"
solana-sdk = "1.17.16"
serde = "1.0.196"
serde_json = "1.0.113"
tracing-subscriber = "0.3"
tracing = "0.1"
bs58 = "0.5"
solana-program = "1.14" 
spl-token = { version = "3.5", features = ["no-entrypoint"] }
base64 = "0.21"
